--- a/index.html
+++ b/index.html
@@ -2,74 +2,7 @@
 <html>
 <head>
 	<title>In easy language</title>
-	<style>
-		body {
-			margin: 0;
-			padding: 0;
-			font-family: Arial, sans-serif;
-			background-color: #f1f1f1;
-		}
-		h1 {
-			text-align: center;
-			margin-top: 50px;
-			font-size: 40px;
-			color: #333;
-			text-shadow: 2px 2px #ddd;
-		}
-		.container {
-			width: 80%;
-			margin: 50px auto;
-			background-color: #fff;
-			box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-			border-radius: 10px;
-			padding: 20px;
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-		}
-		textarea {
-			width: 100%;
-			height: 250px;
-			margin-bottom: 20px;
-			padding: 10px;
-			font-size: 18px;
-			border: none;
-			border-radius: 5px;
-			resize: none;
-			background-color: #f7f7f7;
-			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-			font-family: Arial, sans-serif;
-			color: #333;
-			line-height: 1.5;
-			text-align: justify;
-		}
-		.button_container{
-			display: flex;
-			justify-content: space-between;
-		}
-		button {
-			background-color: #0095ff;
-			color: #fff;
-			border: none;
-			border-radius: 5px;
-			padding: 10px 20px;
-			font-size: 18px;
-			cursor: pointer;
-			transition: all 0.2s ease-in-out;
-			margin: 10px;
-		}
-		button:hover {
-			background-color: #0080cc;
-			transform: scale(1.05);
-		}
-		.copy-success {
-			margin-top: 20px;
-			color: #0095ff;
-			font-weight: bold;
-			text-align: center;
-			display: none;
-		}
-	</style>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h1>In easy language</h1>
@@ -81,42 +14,17 @@
 			<button onclick="copyDetailToClipboard()">Explain in Detail</button>
 			<button onclick="copyCommentCodeToClipboard()">Comment the code</button>
 		</div>
+		<br>
+		<div class="gpt_prompts">😈 GPT Prompts</div>
+		<div class="button_container">
+			<button onclick="copyEvilBotToClipboard()">Evil Bot</button>
+			<button onclick="copyDetailToClipboard()">Explain in Detail</button>
+			<button onclick="copyCommentCodeToClipboard()">Comment the code</button>
+		</div>
 		<p class="copy-success">Text copied to clipboard with added string!</p>
 	</div>
-
-	<script>
-		function copyEasyToClipboard() {
-			var text = document.getElementById("text-box").value;
-			text = "Explain this in easy language:\n\n" + text;
-			navigator.clipboard.writeText(text);
-			var copySuccess = document.querySelector(".copy-success");
-			copySuccess.style.display = "block";
-			setTimeout(function() {
-				copySuccess.style.display = "none";
-			}, 3000);
-		}
-
-		function copyDetailToClipboard() {
-			var text = document.getElementById("text-box").value;
-			text = "Explain this in detail: \n\n" + text;
-			navigator.clipboard.writeText(text);
-			var copySuccess = document.querySelector(".copy-success");
-			copySuccess.style.display = "block";
-			setTimeout(function() {
-				copySuccess.style.display = "none";
-			}, 3000);
-		}
-
-		function copyCommentCodeToClipboard() {
-			var text = document.getElementById("text-box").value;
-			text = "Comment this Code properly: \n\n" + text;
-			navigator.clipboard.writeText(text);
-			var copySuccess = document.querySelector(".copy-success");
-			copySuccess.style.display = "block";
-			setTimeout(function() {
-				copySuccess.style.display = "none";
-			}, 3000);
-		}
-	</script>
+	
+	<script src="script.js"></script>
 </body>
 </html>
+
