adding evil bot and aim bot button

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>In easy language</title>
+	<title>GPT Prompts 😶‍🌫️</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon" >
 </head>
 <body>
-	<h1>In easy language</h1>
+	<h1>GPT Prompts</h1>
 	<div class="container">
-		<p>Paste your text below and click the button to add "Explain this in easy language" before it:</p>
+		<p>Paste your text below and click the button to add the prompt before the question</p>
 		<textarea id="text-box" placeholder="Paste your text here"></textarea>
 		<div class="button_container">
 			<button onclick="copyEasyToClipboard()">Explain in Easy</button>
@@ -18,8 +19,8 @@
 		<div class="gpt_prompts">😈 GPT Prompts</div>
 		<div class="button_container">
 			<button onclick="copyEvilBotToClipboard()">Evil Bot</button>
-			<button onclick="copyDetailToClipboard()">Explain in Detail</button>
-			<button onclick="copyCommentCodeToClipboard()">Comment the code</button>
+			<button onclick="copyDANToClipboard()">Dan Bot</button>
+			<button onclick="copyAIMtCodeToClipboard()">AIM Bot</button>
 		</div>
 		<p class="copy-success">Text copied to clipboard with added string!</p>
 	</div>
